	* GNUmakefile
	* PlaylistController.h
	* PlaylistController.m
	* PlaylistItem.h
	* PlaylistItem.m
	* SongRatingCell.h
	* SongRatingCell.m
	* MPDCon.pcproj/PC.project
	* Resources/Star.tiff 
	* Add Rating of songs in the PlaylistViewer, still
	  with some NSLog output, and still not 100%
        * while there, some int -> NS(U)Integer conversions


2012-10-19: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* LyricsInspector.m When the server is not reachable
	  tell the user about it in the inspector.
	* GNUmakefile
	* GNUmakefile.preamble
	* MPDConInfo.plist
	* MPDCon.pcproj/PC.project
	* Version 1.3

2012-09-25: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* grant a little bit more space for the title in
	  the lyrics inspector
	* Make the buttons in the PlaylistViewer wider to show
	  all the button text

2012-09-25: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Resources/Player.gorm
	* Resources/SongInspector.gorm
	* SongInspector.[h|m]
	* AppController.[h|m]
	* GNUMakefile
	* PlaylistItem.[h|m]
	* MPDController.m
	* Add an Inspector to see all details about the currently
	  played song. PlaylistItem had to be enhanced to handle
	  all available MPD tags. MPDController had to be enhanced
	  to also set the new parameters of a PlaylistItem.

2012-09-02: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Resources/Player.gorm
	* Resources/LyricsInspector.gorm
	* LyricsInspector.[h|m]
	* AppController.[h|m]
	* GNUmakefile
	* Add an Inspector to retrieve lyrics from lyrics.wikia.com,
	  based on the artist and title of the song. The API only
	  gives back about 1/7 of the full lyrics if found, due to
	  fair use and such. Additionally it gives a URL, where
	  the full Lyrics can be found. Therefore the Inspector
	  got a button to open the URL using NSWorkSpace openURL.

2012-06-09: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Documentation/Install update
	* GNUmakefile.preamble, use pkg-config to figure out